# routes/groupApi/ProcedimentoApi.php
@@ -7,7 +7,7 @@ Route::group([
     'prefix' => 'auth/procedimento'
 ], function ($router) {
     Route::post('/store', [ProcedimentoController::class, 'store']);
-    Route::post('/update/{id}', [ProcedimentoController::class, 'update']);
+    Route::put('/update/{id}', [ProcedimentoController::class, 'update']);
     Route::delete('/delete/{id}', [ProcedimentoController::class, 'delete']); 
     Route::get('/show', [ProcedimentoController::class, 'show'])->name('api.client.show'); 
 });
